Changing class namespacing to be on by default.  I feel more comfortable with this.

--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
 <body>
 	<div class="Hello">Hello...</div>
 	<script>
+		$.classchangeNamespace = false;
 		$(".Hello").bind("click", function() {
 			$(this).toggleClass("World");
 		}).bind("classchange", function() {
