--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="Hello">Hello...</div>
-	<script>
+	<script type="text/javascript">
 		$(".Hello").bind("click", function() {
 			$(this).toggleClass("World");
 		}).one("classchange.World", function() {
